--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 /********RESET*********/
-body, h1, h2, h3, p, div, img, nav, ul, a{
+body, h1, h2, h3, p, div, img, nav, ul, a, span{
     margin: 0;
     padding: 0;
     font-size: 16px;
@@ -135,6 +135,7 @@ section {
 }
 
 .item{
+    position: relative;
     width: 269px;
     height: 403px;
     margin-bottom: 27px;
@@ -147,6 +148,38 @@ section {
 }
 .item img:hover{
     opacity: 0.6;
+}
+.item img:hover + .icons-rt {
+    opacity: 0.82;
+}
+.val{
+    display: flex;
+    justify-content: space-around;
+    align-content: center;
+}
+.val span{
+    margin-left: 5px;
+}
+.icons-rt{
+    position: absolute;
+    bottom: 0;
+    color: #FFFFFF;
+    font-size: 0.875em;
+    background-color:  rgb(27, 33, 38);
+    height: 42px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    padding: 5px;
+    opacity: 0;
+    box-sizing: border-box;
+    width: 100%;
+    padding-left: 15px;
+    padding-right: 15px;
+}
+.icons-rt .val > img{
+    height: 22px;
+    width: 22px;
 }
 .btnnoselect:active, .btnselect:active,
 .btnnoselect:link, .btnselect:link,
@@ -168,7 +201,7 @@ section {
     font-weight: 400;
     text-align: center;
     border: 2px solid;
-    border-radius: 4px;
+    border-radius: 6px;
     margin-bottom: 9px;
     padding-top: 4px;
 }
@@ -201,4 +234,43 @@ section {
     border-radius: 5px;
     padding-left: 6px;
     padding-right: 6px;
+}
+.view-individual{
+    background-color: rgba(97, 101, 105, 0.77);
+    position: fixed;
+    top: 0;
+    bottom:0;
+    right: 0;
+    left: 0;
+    z-index: 0;
+}
+.film{
+    position: absolute;
+    top: 0;
+    left: 276px;
+    right: 0;
+    bottom: 0;
+    background-color: #FFFFFF;
+    box-sizing: border-box;
+    padding-left: 26px;
+    padding-right: 18px;
+    -webkit-animation: mymove 1s;
+    -webkit-animation-timing-function: linear;
+    animation: mymove 1s;
+    animation-timing-function: ease;
+}
+.titlefilm{
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+}
+
+@-webkit-keyframes mymove {
+    from {left: 1500px;}
+    to {left: 276px;}
+}
+
+@keyframes mymove {
+    from {left: 1500px;}
+    to {left: 276px}
 }
