--- a/views/individual.html
+++ b/views/individual.html
@@ -5,7 +5,62 @@
                 <span>Título</span>
                 <span>Año</span>
             </div>
-            <img src="img/cross.png">
+            <a href="/"><img src="img/cross.png"></a>
+        </div>
+        <div class="contentfilm">
+            <img src="img/Cartel.jpg">
+            <div class="sipnosis">
+                <div class="headersipnosis">
+                    <span>Sipnosis</span>
+                    <span>2h22m</span>
+                </div>
+                <div class="caractsfilm">
+                    <div class="categoriasfilm">
+                        <span>Accion</span>
+                        <span>Comedia</span>
+                    </div>
+                    <div class="valorationfilm">
+                        <div><img src="img/star-color.png"><span>8</span></div>
+                        <div><img src="img/icon-tomattoes.png"><span>77%</span></div>
+                        <div><img src="img/icon-popcorn.png"><span>77%</span></div>
+                    </div>
+                </div>
+                <div class="abstractfilm">
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab, quas saepe labore qui eos, nulla consequatur facere harum blanditiis
+                        temporibus omnis impedit vitae doloribus quo voluptates, sed, inventore dolor. Eligendi.
+                    </p>
+                </div>
+                <div class="trailer">
+                    <p>Trailer</p>
+                    <iframe src="https://www.youtube.com/embed/cpkN0JdXRpM"></iframe>
+                </div>
+            </div>
+        </div>
+        <div class="subtitles">
+            <span>Subs:</span>
+            <span><a href="#">en</a></span>
+            <span><a href="#">de</a></span>
+            <span><a href="#">es</a></span>
+        </div>
+        <p>Películas similares</p>
+        <div class="similiarmovies">
+            <div>
+                <img src="img/relations.jpg">
+                <p>Inception</p>
+            </div>
+            <div>
+                <img src="img/relations.jpg">
+                <p>Inception</p>
+            </div>
+            <div>
+                <img src="img/relations.jpg">
+                <p>Inception</p>
+            </div>
+            <div>
+                <img src="img/relations.jpg">
+                <p>Inception</p>
+            </div>
         </div>
     </div>
 </div>
