--- a/css/style.css
+++ b/css/style.css
@@ -101,9 +101,7 @@ section {
 .headersubcontent p {
     font-weight: 400;
 }
-.letterdelete{
-    color: #f3644f;
-}
+
 .headeraside > .iconfilter{
     height: 25px;
     margin-right: 34px;
@@ -123,6 +121,11 @@ section {
     flex: 2;
     display: flex;
     justify-content: space-between;
+}
+.textheaderaside p a{
+    text-decoration: none;
+    color: #5c6269;
+    cursor: pointer;
 }
 .subcontent > .headersubcontent {
     width: 100%;
@@ -150,13 +153,13 @@ section {
     width: 100%;
     height: 100%;
 }
-.item img:hover{
+.item:hover img{
     opacity: 0.6;
 }
-.item img:hover + .icons-rt {
+.item:hover img + .icons-rt {
     opacity: 0.82;
 }
-.val{
+.val {
     display: flex;
     justify-content: space-around;
     align-content: center;
@@ -164,6 +167,7 @@ section {
 .val span{
     margin-left: 5px;
 }
+
 .icons-rt{
     position: absolute;
     bottom: 0;
@@ -185,8 +189,13 @@ section {
     display: flex;
     align-items: center;
 }
+.fa-heart, .fa-clock-o{
+    cursor: pointer;
+}
 .letterdelete{
     color: #f3644f;
+    cursor: pointer;
+
 }
 .btnnoselect:active, .btnselect:active,
 .btnnoselect:link, .btnselect:link,
@@ -200,7 +209,7 @@ section {
     flex-wrap: wrap;
     justify-content: space-between;
 }
-.btnnoselect, .btnselect{
+.btnSelect, .btnNoSelect{
     width: 113px;
     height: 25px;
     display: inline-block;
@@ -212,11 +221,11 @@ section {
     margin-bottom: 9px;
     padding-top: 4px;
 }
-.btnselect{
+.btnSelect{
     color: #2883d8;
     border-color: #2883d8;
 }
-.btnnoselect{
+.btnNoSelect{
     color: #8e9297;
     border-color: #8e9297;
 }
@@ -446,6 +455,12 @@ body.modalOpen{
     border-top: 1px solid #a5a8ac;
     border-right: 1px solid #a5a8ac;
     border-left: 1px solid #a5a8ac;
+}
+.menu ul li:last-child ul li:hover{
+    background-color: #a5a8ac;
+}
+.menu ul li:last-child ul li:hover a{
+   color: #1b2126;
 }
 @-webkit-keyframes mymove {
     from {left: 1500px;}
