--- a/views/home.html
+++ b/views/home.html
@@ -1,5 +1,5 @@
 <div class="headersubcontent">
-    <p><span class="nummovies">107,875</span> películas encontradas</p>
+    <p><span class="nummovies">{{films.length}}</span> películas encontradas</p>
     <p>Ordenar <a href="#"><i class="fa fa-angle-down" aria-hidden="true"></a></i></p>
 </div>
 <div class="containermovie">
@@ -7,8 +7,8 @@
         <img ng-src="{{film.poster}}" title="{{film.name}}">
         <div class="icons-rt">
             <div class="val" id="star"><i class="fa fa-star-o fa-lg" aria-hidden="true"></i> <span>8</span></div>
-            <div class="val"><i class="fa fa-heart fa-lg" aria-hidden="true"></i> <span>77%</span></div>
-            <div class="val"><i class="fa fa-clock-o fa-lg" aria-hidden="true"></i> <span>77%</span></div>
+            <div class="val"><i class="fa fa-heart fa-lg" aria-hidden="true"></i></div>
+            <div class="val"><i class="fa fa-clock-o fa-lg" aria-hidden="true"></i></div>
         </div>
     </a>
 </div>
