--- a/views/seeLater.html
+++ b/views/seeLater.html
@@ -1,14 +1,13 @@
 <div class="headersubcontent">
-    <p><span class="nummovies">{{Main.totalPelis}}</span> películas encontradas</p>
+    <p><span class="nummovies">{{filmsSeeLater.length}}</span> películas encontradas</p>
     <p>Ordenar <a href="#"><i class="fa fa-angle-down" aria-hidden="true"></a></i></p>
 </div>
 <div class="containermovie">
-    <div class="item" ng-repeat="film in Main.films track by film.id">
+    <div class="item" ng-repeat="film in filmsSeeLater track by film.id">
         <a  ng-model="oneFilm" href="/individual/{{film.id}}"><img ng-src="{{film.poster}}" title="{{film.name}}"></a>
         <div class="icons-rt">
             <div class="val" id="star"><i class="fa fa-star-o fa-lg" aria-hidden="true"></i><span>{{film.vote}}</span></div>
-            <div class="val"><i ng-click="addFavourite(film)" class="fa fa-heart fa-lg" aria-hidden="true"></i></div>
-            <div class="val"><i ng-click="addSeeLater(film)" class="fa fa-clock-o fa-lg" aria-hidden="true"></i></div>
+            <div class="val"><i ng-click="deleteFilm(film)" class="fa fa-trash-o fa-lg" aria-hidden="true"></i></div>
         </div>
     </div>
 </div>
