--- a/views/favourites.html
+++ b/views/favourites.html
@@ -4,7 +4,7 @@
 </div>
 <div class="containermovie">
     <div class="item" ng-repeat="film in filmsFav track by film.id">
-        <a  ng-model="oneFilm" href="individual/{{film.id}}"><img ng-src="{{film.poster}}" title="{{film.name}}"></a>
+        <a  ng-model="oneFilm" href="/individual/{{film.id}}"><img ng-src="{{film.poster}}" title="{{film.name}}"></a>
         <div class="icons-rt">
             <div class="val" id="star"><i class="fa fa-star-o fa-lg" aria-hidden="true"></i><span>{{film.vote}}</span></div>
             <div class="val"><i ng-click="deleteFilm(film)" class="fa fa-trash-o fa-lg" aria-hidden="true"></i></div>
