--- a/views/upcoming.html
+++ b/views/upcoming.html
@@ -3,7 +3,7 @@
     <p>Ordenar <a href="#"><i class="fa fa-angle-down" aria-hidden="true"></a></i></p>
 </div>
 <div class="containermovie">
-    <div ng-model="oneFilm" class="item" ng-repeat="film in films | filter: Main.nameFilm track by film.id">
+    <div ng-model="oneFilm" class="item" ng-repeat="film in filmsMostrar track by film.id">
         <a href="individual/{{film.id}}"><img ng-src="{{film.poster}}" title="{{film.name}}"></a>
         <div class="icons-rt">
             <div class="val" id="star"><i class="fa fa-star-o fa-lg" aria-hidden="true"></i><span>{{film.vote}}</span></div>
